<resources>
    <string name="app_name">someLittlePortion</string>
    <string name="home">홈</string>
    <string name="inventory">인벤토리</string>
    <string name="farming">탐색가기</string>
    <string name="myPage">마이페이지</string>
    <string name="store">상점</string>
    <string name="setting">설정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilePicButton">프로필 사진</string>
    <string name="toolDescription">"파밍에 필요한 무기를 고를 수 있습니다. "</string>
    <string name="tool_list">도구 목록</string>
    <string name="customDialogImsiText">임시텍스트를몇자로해야할지잘모르겠네요임시텍스트를몇자로해야할지잘모르겠네요임시텍스트를몇자로해야할지잘모르겠네요임시텍스트를몇자로해야할지잘모르겠네요임시텍스트를몇자로해야할지잘모르겠네요임시텍스트를몇자로해야할지잘모르겠네요</string>
    <string name="toolDeleteBtnDescription">도구 목록을 지우기 위한 버튼입니다.</string>
</resources>